--- a/projects/concord/src/app/containers/con-default/con-default/con-default.component.html
+++ b/projects/concord/src/app/containers/con-default/con-default/con-default.component.html
@@ -1,1 +1,8 @@
 <p>con-default works!</p>
+<app-comp-text>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita eveniet modi quia magnam. Dolores, alias. Possimus ea illum, quas neque asperiores tempore dolorum nihil, perspiciatis quia ad dignissimos quo delectus.</app-comp-text>
+<app-comp-text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cupiditate asperiores autem ipsam modi, magni beatae id est, in consectetur quo quisquam minima culpa illo animi, libero eos numquam ipsum.</app-comp-text>
+<app-comp-text>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptatibus sequi quaerat impedit sit dolor, iste totam! Aut eos in placeat cumque aspernatur quibusdam asperiores repellendus, nisi, repellat, maxime recusandae.</app-comp-text>
+<hr>
+<app-comp-button>Valider</app-comp-button>
+<app-comp-button>Configurer</app-comp-button>
+<app-comp-button>Annuler</app-comp-button>
