ajout d'un attribut 'type' au comp-button

--- a/projects/concord/src/app/containers/con-default/con-default/con-default.component.html
+++ b/projects/concord/src/app/containers/con-default/con-default/con-default.component.html
@@ -3,6 +3,6 @@
 <app-comp-text text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cupiditate asperiores autem ipsam modi, magni beatae id est, in consectetur quo quisquam minima culpa illo animi, libero eos numquam ipsum.</app-comp-text>
 <app-comp-text important>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptatibus sequi quaerat impedit sit dolor, iste totam! Aut eos in placeat cumque aspernatur quibusdam asperiores repellendus, nisi, repellat, maxime recusandae.</app-comp-text>
 <hr>
-<app-comp-button>Valider</app-comp-button>
-<app-comp-button>Configurer</app-comp-button>
-<app-comp-button>Annuler</app-comp-button>
+<app-comp-button type="validation">Valider</app-comp-button>
+<app-comp-button type="configuration">Configurer</app-comp-button>
+<app-comp-button type="cancelation">Annuler</app-comp-button>
