ajoute un layout

--- a/projects/concord/src/app/containers/con-default/con-default/con-default.component.html
+++ b/projects/concord/src/app/containers/con-default/con-default/con-default.component.html
@@ -1,8 +1,18 @@
-<p>con-default works!</p>
-<app-comp-text title>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita eveniet modi quia magnam. Dolores, alias. Possimus ea illum, quas neque asperiores tempore dolorum nihil, perspiciatis quia ad dignissimos quo delectus.</app-comp-text>
-<app-comp-text text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cupiditate asperiores autem ipsam modi, magni beatae id est, in consectetur quo quisquam minima culpa illo animi, libero eos numquam ipsum.</app-comp-text>
-<app-comp-text important>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptatibus sequi quaerat impedit sit dolor, iste totam! Aut eos in placeat cumque aspernatur quibusdam asperiores repellendus, nisi, repellat, maxime recusandae.</app-comp-text>
-<hr>
-<app-comp-button type="validation">Valider</app-comp-button>
-<app-comp-button type="configuration">Configurer</app-comp-button>
-<app-comp-button type="cancelation">Annuler</app-comp-button>
+<app-layout-default>
+  <app-comp-text title class="content-header">Un bien joli titre</app-comp-text>
+
+  <app-comp-text text
+    >Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cupiditate
+    asperiores autem ipsam modi, magni beatae id est, in consectetur quo
+    quisquam minima culpa illo animi, libero eos numquam ipsum.</app-comp-text
+  >
+
+  <hr />
+  <app-comp-button type="validation">Valider</app-comp-button>
+  <app-comp-button type="configuration">Configurer</app-comp-button>
+  <app-comp-button type="cancelation">Annuler</app-comp-button>
+
+  <app-comp-text important class="content-footer"
+    >Un bien joli footer</app-comp-text
+  >
+</app-layout-default>
