--- a/projects/concord/src/app/layouts/layout-default/layout-default.component.html
+++ b/projects/concord/src/app/layouts/layout-default/layout-default.component.html
@@ -1,1 +1,9 @@
-<p>layout-default works!</p>
+<header>
+    <ng-content select='.content-header'></ng-content>
+</header>
+<main>
+    <ng-content></ng-content>
+</main>
+<footer>
+    <ng-content select='.content-footer'></ng-content>
+</footer>
