--- a/projects/concord/src/app/layouts/layout-default/layout-default.component.scss
+++ b/projects/concord/src/app/layouts/layout-default/layout-default.component.scss
@@ -22,3 +22,10 @@ footer {
   width: 100%;
   height: 10vh;
 }
+
+/* RWD Responsive Web Design */
+@media screen and (max-height: 700px) {
+  footer {
+    display: none;
+  }
+}
