--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,7 @@
-
 <h1>Lab</h1>
 
 <button (click)="rs.emmitValue()">Emit</button>
 
 <app-reactive></app-reactive>
 
-<button (click)="open = !open">{{open}}</button>
-
-<app-reactive *ngIf="open"></app-reactive>
-
-<any-card></any-card>
+<any-card *ngFor="let card of cards" [content]="card"> </any-card>
